{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 84,
  "lineage": "26b5e7a2-41ac-9e87-055f-119bc7c9d5b3",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:650377935561:network-acl/acl-09a0a794087850c3a",
            "default_network_acl_id": "acl-09a0a794087850c3a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09a0a794087850c3a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "650377935561",
            "subnet_ids": [
              "subnet-0a62dc31e4466efd4",
              "subnet-0bac59b6e82a354e4",
              "subnet-0d8a0dfc5c1818929",
              "subnet-0f3389a3fddc80b5e"
            ],
            "tags": {
              "Name": "test-default"
            },
            "tags_all": {
              "Name": "test-default"
            },
            "vpc_id": "vpc-0a1ec483947a6f192"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:650377935561:route-table/rtb-026584ccb4c00ddd2",
            "default_route_table_id": "rtb-026584ccb4c00ddd2",
            "id": "rtb-026584ccb4c00ddd2",
            "owner_id": "650377935561",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "test-default"
            },
            "tags_all": {
              "Name": "test-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a1ec483947a6f192"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:650377935561:security-group/sg-099966bd907ca8a1f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-099966bd907ca8a1f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "650377935561",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-default"
            },
            "tags_all": {
              "Name": "test-default"
            },
            "vpc_id": "vpc-0a1ec483947a6f192"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da1cc9d782510334",
            "domain": "vpc",
            "id": "eipalloc-0da1cc9d782510334",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-3-254-23-171.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.254.23.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-eu-west-1a",
              "accessible": "private"
            },
            "tags_all": {
              "Name": "test-eu-west-1a",
              "accessible": "private"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb4d6833ac891ba8",
            "domain": "vpc",
            "id": "eipalloc-0eb4d6833ac891ba8",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-194-246-41.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.246.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-eu-west-1b",
              "accessible": "private"
            },
            "tags_all": {
              "Name": "test-eu-west-1b",
              "accessible": "private"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:650377935561:internet-gateway/igw-0322d416d34d7a258",
            "id": "igw-0322d416d34d7a258",
            "owner_id": "650377935561",
            "tags": {
              "Name": "test-igw"
            },
            "tags_all": {
              "Name": "test-igw"
            },
            "vpc_id": "vpc-0a1ec483947a6f192"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da1cc9d782510334",
            "association_id": "eipassoc-05ce299ba6cfdd7db",
            "connectivity_type": "public",
            "id": "nat-0ac2701daaf2bb6e4",
            "network_interface_id": "eni-086c12501b6f77fed",
            "private_ip": "10.0.1.149",
            "public_ip": "3.254.23.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bac59b6e82a354e4",
            "tags": {
              "Name": "test-eu-west-1a"
            },
            "tags_all": {
              "Name": "test-eu-west-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb4d6833ac891ba8",
            "association_id": "eipassoc-0deed079084a93377",
            "connectivity_type": "public",
            "id": "nat-099a94e3b58445944",
            "network_interface_id": "eni-06c1d4dc8fb5399e9",
            "private_ip": "10.0.2.88",
            "public_ip": "54.194.246.41",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f3389a3fddc80b5e",
            "tags": {
              "Name": "test-eu-west-1b"
            },
            "tags_all": {
              "Name": "test-eu-west-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-094453d76ee9a4eb11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ac2701daaf2bb6e4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-094453d76ee9a4eb1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0689599ac5bc9cb131080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-099a94e3b58445944",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0689599ac5bc9cb13",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0322d416d34d7a258",
            "id": "r-rtb-056fe58c8581b20d11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056fe58c8581b20d1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:650377935561:route-table/rtb-094453d76ee9a4eb1",
            "id": "rtb-094453d76ee9a4eb1",
            "owner_id": "650377935561",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-private-eu-west-1a",
              "accessible": "private"
            },
            "tags_all": {
              "Name": "test-private-eu-west-1a",
              "accessible": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1ec483947a6f192"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:650377935561:route-table/rtb-0689599ac5bc9cb13",
            "id": "rtb-0689599ac5bc9cb13",
            "owner_id": "650377935561",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-private-eu-west-1b",
              "accessible": "private"
            },
            "tags_all": {
              "Name": "test-private-eu-west-1b",
              "accessible": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1ec483947a6f192"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:650377935561:route-table/rtb-056fe58c8581b20d1",
            "id": "rtb-056fe58c8581b20d1",
            "owner_id": "650377935561",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-public-eu-west-1",
              "accessible": "public"
            },
            "tags_all": {
              "Name": "test-public-eu-west-1",
              "accessible": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1ec483947a6f192"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aedbc762d58b1227",
            "route_table_id": "rtb-094453d76ee9a4eb1",
            "subnet_id": "subnet-0d8a0dfc5c1818929"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b47db47ff3d2b9a9",
            "route_table_id": "rtb-0689599ac5bc9cb13",
            "subnet_id": "subnet-0a62dc31e4466efd4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c91f5376ad6df208",
            "route_table_id": "rtb-056fe58c8581b20d1",
            "subnet_id": "subnet-0bac59b6e82a354e4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054b18af5716064ae",
            "route_table_id": "rtb-056fe58c8581b20d1",
            "subnet_id": "subnet-0f3389a3fddc80b5e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:650377935561:subnet/subnet-0d8a0dfc5c1818929",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8a0dfc5c1818929",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "650377935561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-private-eu-west-1a",
              "accessible": "private"
            },
            "tags_all": {
              "Name": "test-private-eu-west-1a",
              "accessible": "private"
            },
            "vpc_id": "vpc-0a1ec483947a6f192"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:650377935561:subnet/subnet-0a62dc31e4466efd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a62dc31e4466efd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "650377935561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-private-eu-west-1b",
              "accessible": "private"
            },
            "tags_all": {
              "Name": "test-private-eu-west-1b",
              "accessible": "private"
            },
            "vpc_id": "vpc-0a1ec483947a6f192"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:650377935561:subnet/subnet-0bac59b6e82a354e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bac59b6e82a354e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "650377935561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-eu-west-1a",
              "accessible": "public"
            },
            "tags_all": {
              "Name": "test-public-eu-west-1a",
              "accessible": "public"
            },
            "vpc_id": "vpc-0a1ec483947a6f192"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:650377935561:subnet/subnet-0f3389a3fddc80b5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3389a3fddc80b5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "650377935561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-eu-west-1b",
              "accessible": "public"
            },
            "tags_all": {
              "Name": "test-public-eu-west-1b",
              "accessible": "public"
            },
            "vpc_id": "vpc-0a1ec483947a6f192"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:650377935561:vpc/vpc-0a1ec483947a6f192",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09a0a794087850c3a",
            "default_route_table_id": "rtb-026584ccb4c00ddd2",
            "default_security_group_id": "sg-099966bd907ca8a1f",
            "dhcp_options_id": "dopt-7cb42c1a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a1ec483947a6f192",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026584ccb4c00ddd2",
            "owner_id": "650377935561",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}